--- a/style.css
+++ b/style.css
@@ -2,38 +2,62 @@ body{
     font-family: "Press Start 2P";
     font-size: 0.7rem;
     background-color: black;
+    cursor: url('img/cropped.jpg'), auto;
 }
 
+/* width */
 .max-width-900{
     max-width: 900px;
 }
+/* 
+div.container{
+    border: 3px solid #00FF00;
+    border-radius: 5px;
+} */
 
+/* box */
 .box{
-    width: calc(100% / 7 - 10px);
+    width: calc(100% / 5 - 10px);
     aspect-ratio: 1 / 1;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 5px;
-    background-color: white;
-    color: black;
-    border: 2px solid black;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    border: 3px solid #1919A6;
+}
+
+.box:hover{
+    border: 5px solid #00FF00;
+    transition: 0.2s linear;
+    scale: 1.1;
 }
 
 .fizz{
-    background-color: blue;
-    color: orange;
-    border: 2px solid orange;
+    background-color: aqua;
+    color: white;
+    border: 3px solid white;
 }
 
 .buzz{
-    background-color: gold;
-    color: blue;
-    border: 2px solid blue;
+    background-color: #DEA185;
+    color: white;
+    border: 3px solid white;
 }
 
 .fizzbuzz{
-    background-color: greenyellow;
-    color: red;
-    border: 2px solid rgb(1, 83, 1);
+    background-color: red;
+    color: white;
+    border: 3px solid white;
+}
+
+
+/***************/
+/* Media Query */
+@media screen and (min-width: 992px) {
+    .box{
+        width: calc(100% / 7 - 10px);
+    }
 }
